--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@babylonjs/inspector": "^6.40.0",
     "@babylonjs/loaders": "^6.40.0",
     "@babylonjs/materials": "^6.40.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
